--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       </title>
    </head>
    <body>
+      <h2>Simple Todo-List</h2>
       <input id="input" placeholder="What needs to be done?">
       <ul id="list"></ul>
    </body>
